--- a/index.html
+++ b/index.html
@@ -241,6 +241,15 @@ also gives me an awesome playground to try out new technologies before advocatin
 <span class="badge">Express</span>
 <span class="badge">Firebase</span>
 </p>
+<h4>This Resume Of Sorts <span class="label label-important">Side Project</span></h4>
+<p>
+After interviewing hundreds of candidates, I'm trying to reinvent the common CV a little bit.  I'm attempting to de-emphasize certain 
+aspects on the the typical resume, while trying to telling a more product-oriented story of a career.  Not sure how it's going yet.
+</p>
+<p>
+<span class="badge">HTML</span>
+<span class="badge">Bootstrap</span>
+</p>
 
 <h2>Where I Built It <span class="muted"><small>in a rather particular order</small></span></h2>
 <a id='isocket'></a>
