added WIP alert

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 </div>
 
 <div class="main-container">
+<div class="alert">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <strong>Work in progress!</strong> I'm still playing around with this, it's not done yet :)
+</div>
 <h2>Stuff I Built <span class="muted"><small>in no particular order</small></span></h2>
 <a id='cps'></a>
 <h4>Cross Portal Search <span class="label label-warning">Admeld</span></h4>
@@ -67,7 +71,7 @@ around at the time it would have made my job a lot easier.  This is a nice segwa
 <h4>Inventory Search <span class="label label-info">isocket</span></h4>
 <p>
 isocket's core mission is to make it easier for Publishers and Advertisers to find each other and do business directly.  
-Central to that goal is the ability to find inventory available on a particular site by virtually any number of vectors, such as comScore demographics, ad placement, price, category... even weather - although no one has ever used that.</br>
+Central to that goal is the ability to find inventory available on a particular site by virtually any number of vectors, such as comScore demographics, ad placement, price, IAB category... even weather - although no one has ever used that.</br>
 <a href="/images/isocket_screenshot.png" target="_blank">screenshot</a>
 </p>
 <p>
