added dogfort anchor

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul class="dropdown-menu">
           <li><a tabindex="-1" href="#cps">Cross Portal Search</a></li>
           <li><a tabindex="-1" href="#inventory_search">Inventory Search</a></li>
+          <li><a tabindex="-1" href="#dogfort">Dogfort</a></li>
         </ul>
       </li>
       <li class="dropdown">
@@ -172,9 +173,10 @@ we were able to have a complete view of what was going on in what was quickly be
 <span class="badge">Java</span>
 <span class="badge">MySQL</span>
 </p>
-<h4>Disaster Alerts in Google Search <span class="label label-success">Google</span></h4>
+<h4>Disaster Alerts in Google Search / Android<span class="label label-success">Google</span></h4>
 <p>
 TODO
+<a href="/images/gpa_screenshot2.png" target="_blank">screenshot</a>
 </p>
 <p>
 <span class="badge">Python</span>
@@ -219,6 +221,7 @@ product page</a>
 <span class="badge">Javascript</span>
 <span class="badge">jQuery</span>
 </p>
+<a id='dogfort'></a>
 <h4>Dogfort <span class="label label-important">Side Project</span></h4>
 <p>
 Anti-social networking.  As my circle of eng friends from Admeld got thrown to the diaspora, we could no longer all communicate
