--- a/index.html
+++ b/index.html
@@ -173,9 +173,16 @@ we were able to have a complete view of what was going on in what was quickly be
 <span class="badge">Java</span>
 <span class="badge">MySQL</span>
 </p>
-<h4>Disaster Alerts in Google Search / Android<span class="label label-success">Google</span></h4>
+<h4>Disaster Alerts in Google Search / Android <span class="label label-success">Google</span></h4>
 <p>
-TODO
+Cellular providers have been required by law to (finally) start pushing out timely public safety alerts to phones.  These alerts are usually in all caps and accompanied by an obscenely scary noise.  Using the data that the Public Alerts team is already ingesting, we wanted to supplant (or at least suppliment) these alerts with something less panic-inducing, and more information forward.  To replace "FLOOD WARNING" with a map and detailed (decapitalized) information such as time, duration, depth, likelihood... all the stuff that matters when you need it most.
+</p>
+<p>
+My particular contribution to this project was to take the alert text from sources like the National Weather Service and extract out the most relevant parts and recombine them to form a useful and informative snippet.  For example, on a Tornado warning I'd focus more on directional and temporal aspects rather than rainfall amounts.  This was done by tokenizing the text and weighting certain n-grams based on the alert type.  I also worked on the UI for both the Web, and Android.
+</p>
+<p>
+These alerts were intended originally for only for Maps on the Android platform, but once demo'd we were asked to put them in Google Web Search, iOS Maps, and Google Now.  
+</p>
 <a href="/images/gpa_screenshot2.png" target="_blank">screenshot</a>
 </p>
 <p>
@@ -184,9 +191,12 @@ TODO
 <span class="badge">Javascript</span>
 <span class="badge">Appengine</span>
 </p>
-<h4>Power Outage Maps During Hurricane Sandy <span class="label label-success">Google</span></h4>
+<h4>Power Outage/Gas Supply Maps During Hurricane Sandy <span class="label label-success">Google</span></h4>
 <p>
-TODO
+During Hurricane Sandy, the NYC branch of the Google Crisis Response team had a rare opportunity to operate in an area where we were actively responding as well.  Since we were able to work closely with NYC Department of Emergency Management and the NYC Mayors office, we were able to get access to power outage data we normally were never allowed to use. 
+</p>
+<p>
+There was a more interesting data point we were able to capture as well.  There were a lot of software engineers who no longer had to go to work for the week and were forming up under IRC and Twitter as "Hurricane Hackers" to try to help out in any way they could.  I was able to engage that community and Google provided resources to help them, and they in turn were able to hack together a gas supply data set that I was then able to plot on the Crisis Map.  While probably not in any way the most difficult thing I've worked on, it's the only thing I've ever built that was on CNN.
 </p>
 <p>
 <span class="badge">Python</span>
@@ -196,7 +206,7 @@ TODO
 </p>
 <h4>Magicbus <span class="label label-info">isocket</span></h4>
 <p>
-Evented io / pubsub backend.  TODO.
+Evented io / pubsub backend.  TODO: FILL ME IN
 </p>
 <p>
 <span class="badge">C++</span>
@@ -209,7 +219,7 @@ Evented io / pubsub backend.  TODO.
 </p>
 <h4>Firemeld / Firemeld for Chrome <span class="label label-warning">Admeld</span></h4>
 <p>
-TODO</br>
+</br>
 <a href="https://chrome.google.com/webstore/detail/firemeld-for-chrome/ookfklonckbommknbjoglkhmjcjihhpp?hl=en" target="_blank">
 extension</a></br>
 <a href="https://portal.admeld.com/custom/firemeld/download.html" target="_blank">
@@ -250,8 +260,7 @@ also gives me an awesome playground to try out new technologies before advocatin
 </p>
 <h4>This Resume Of Sorts <span class="label label-important">Side Project</span></h4>
 <p>
-After interviewing hundreds of candidates, I'm trying to reinvent the common CV a little bit.  I'm attempting to de-emphasize certain 
-aspects on the the typical resume, while trying to telling a more product-oriented story of a career.  Not sure how it's going yet.
+Not sure how it's going yet.
 </p>
 <p>
 <span class="badge">HTML</span>
