--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 <h2>Stuff I Built <span class="muted"><small>in no particular order</small></span></h2>
 <a id='desmond'></a>
-<h4>Embedded Checkout<span class="label label-warning">Bread Finance</span></h4>
+<h4>Embedded Checkout&nbsp;<span class="label label-warning">Bread Finance</span></h4>
 <p>
 Merchants hate it when a service provider takes you away from their page to perform a transaction.  At Bread, we provided a <a href='https://developers.getbread.com'>straightforward API</a>
 to easily integrate any storefront experience with Bread Financing.  The button can look like our default button, but is completely customizable for those who preferred a whitelabeled solution.
@@ -286,10 +286,10 @@ Not sure how it's going yet.
 Bread makes it easy to pay over time for the things you love.
 <a href="https://www.getbread.com/" target="_blank">link</a>
 </p>
-<h4>iSocket&nbsp;(acquired by Rubicon Project)
+<h4>iSocket&nbsp;<small>(acquired by Rubicon Project)</small>
 <span class="text-warning">Senior Software Engineer</span>&nbsp;
 </h4>
-<em>Burlingame CA, New York NY&nbsp;<span class="muted">Mar 2013 -> Aug 2014<span class="text-success">Present</span></span></em>
+<em>Burlingame CA, New York NY&nbsp;<span class="muted">Mar 2013 -> Aug 2014</span></em>
 <p>
 iSocket simplifies the direct sales process. Their technology automates the manual steps like order execution and monitoring, helping premium publishers and advertisers do more business directly.</br>
 <a href="https://www.isocket.com/" target="_blank">link</a>
@@ -309,7 +309,7 @@ Being prepared is just as important as knowing what to do in a crisis. Public Al
 <a href="http://www.google.org/intl/en_US/crisisresponse/publicalerts/" target="_blank">link</a></br>
 <a href="/images/gpa_screenshot.png" target="_blank">screenshot</a>
 </p>
-<h4>Admeld&nbsp;
+<h4>Admeld&nbsp;<small>(Acquired by Google)</small>
 <span class="text-warning">Senior Software Engineer</span>&nbsp;
 </h4>
 <em>New York NY&nbsp;<span class="muted">Aug 2008 -> Dec 2011</span></em>
