--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           Stuff I Built&nbsp;<b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
+          <li><a tabindex="-1" href="#checkout">Embedded Checkout</a></li>
           <li><a tabindex="-1" href="#cps">Cross Portal Search</a></li>
           <li><a tabindex="-1" href="#inventory_search">Inventory Search</a></li>
           <li><a tabindex="-1" href="#dogfort">Dogfort</a></li>
@@ -37,12 +38,8 @@
 </div>
 
 <div class="main-container">
-<div class="alert">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong>Work in progress!</strong> I'm still playing around with this, it's not done yet :)
-</div>
 <h2>Stuff I Built <span class="muted"><small>in no particular order</small></span></h2>
-<a id='desmond'></a>
+<a id='checkout'></a>
 <h4>Embedded Checkout&nbsp;<span class="label label-warning">Bread Finance</span></h4>
 <p>
 Merchants hate it when a service provider takes you away from their page to perform a transaction.  At Bread, we provided a <a href='https://developers.getbread.com'>straightforward API</a>
