--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ NRSI is a research-based educational organization dedicated to improving literac
 <a href="http://www.nrsi.com" target="_blank">link</a> <span class="muted"><small>(I swear I didn't build this terrible site)</small></span>
 </p>
 <h4>SUSS MicroTec&nbsp;
-<span class="text-warning">Software Engineer</span>&nbsp;
+<span class="text-warning">Senior Software Engineer / Electrical Engineer</span>&nbsp;
 </h4>
 <em>Ste Jeorie FRANCE, Vonnigen GERMANY, Waterbury VT&nbsp;<span class="muted">Aug 2000 -> Oct 2001</span></em>
 <p>
